# Randomizer

./: .gitignore
GameCube/: CMakeLists.txt  Makefile
GameCube/assets/: wii_banner.raw  wii_banner.xcf  wus0.lst
GameCube/cmake/: elf2rel.cmake  module_macros.cmake  packer.cmake  relmapper.cmake  tp_rel.cmake
GameCube/source/: CMakeLists.txt
GameCube/source/asm/: adjustAGPoeItem.s  adjustBugReward.s  adjustCreateItemParams.s  adjustFieldItemParams.s  adjustIzaWolf.s  adjustPoeItem.s  adjustSkyCharacter.s  asmCallCodehandler.s  check60PoeReward.s  do_link_hook.s  replaceGWolfWithItem.s  showReekfishPath.s  transformDiababaWolf.s  transformOokWolf.s  unpatchMapGlitch.S
GameCube/subrel/: CMakeLists.txt
GameCube/subrel/boot/: CMakeLists.txt
GameCube/subrel/seed/: Makefile
